feat($global): Added commitizen script to package.json. Fixes anchor list.

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 
 	<ul>
 		<li>
-			<a href="#">Some link</a>
+			<a href="#">Link here</a>
 		</li>
 		<li>
-			<a href="#">Some 2 link</a>
+			<a href="#">Link here 2</a>
 		</li>
 		<li>
-			<a href="#">Some 3 link</a>
+			<a href="#">Link here 3</a>
 		</li>
 	</ul>
 </body>
