feat(vue): Added login component to the index.html file
closes #1

--- a/index.html
+++ b/index.html
@@ -1,22 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Document</title>
-</head>
-<body>
-	<h1>Here is a document I created</h1>
-
-	<ul>
-		<li>
-			<a href="#">Link here</a>
-		</li>
-		<li>
-			<a href="#">Link here 2</a>
-		</li>
-		<li>
-			<a href="#">Link here 3</a>
-		</li>
-	</ul>
-</body>
+    <head>
+        <meta charset="utf-8">
+            <title>
+                Document
+            </title>
+        </meta>
+    </head>
+    <body>
+        <main>
+            <div class="wrap">
+                <h1>
+                    Here is a document I created
+                </h1>
+                <ul>
+                    <li>
+                        <a href="#">
+                            Link here
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            Link here 2
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            Link here 3
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <login></login>
+        </main>
+        <script src="dist/app.js">
+        </script>
+    </body>
 </html>
