feat(vue): Added new Register component

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                 </ul>
             </div>
             <login></login>
+            <register></register>
         </main>
         <script src="dist/app.js">
         </script>
